fix menu: visible menu link

--- a/style/global.css
+++ b/style/global.css
@@ -13,6 +13,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+section{
+    height: 100dvh;
+}
+
 a{
     text-decoration: none;
 }
